--- a/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
@@ -76,15 +76,19 @@ services:
     image: bde2020/hive:2.3.2-postgresql-metastore
     container_name: hive-metastore-init
     # Removed env_file to prevent HDFS configuration conflict
-    environment: # <-- FINAL CORRECT ENVIRONMENT VARIABLES
-      - HIVE_SITE_CONF_fs_defaultFS=hdfs://namenode:8020
+    environment:
+      # HADOOP CORE CONFIGURATION: THIS IS THE FINAL CORRECTED VARIABLE
+      - CORE_SITE_XML_fs_defaultFS=hdfs://namenode:8020 # <-- NEW PREFIX
+
+      # HIVE WAREHOUSE CONFIGURATION (Required for Metastore startup)
       - HIVE_SITE_CONF_hive_metastore_warehouse_dir=/user/hive/warehouse
+
+      # METASTORE DB CONFIGURATION
       - HIVE_SITE_CONF_javax_jdo_option_ConnectionURL=jdbc:postgresql://hive-metastore-postgresql:5432/metastore
       - HIVE_SITE_CONF_javax_jdo_option_ConnectionDriverName=org.postgresql.Driver
       - HIVE_SITE_CONF_javax_jdo_option_ConnectionUserName=hive
       - HIVE_SITE_CONF_javax_jdo_option_ConnectionPassword=hive
       - HIVE_SITE_CONF_hive_metastore_uris=thrift://hive-metastore:9083
-      - HIVE_SITE_CONF_hive_metastore_warehouse_dir=/user/hive/warehouse
     depends_on:
       hive-metastore-postgresql:
         condition: service_healthy
@@ -99,9 +103,11 @@ services:
     image: bde2020/hive:2.3.2-postgresql-metastore
     container_name: hive-metastore
     # Removed env_file to prevent HDFS configuration conflict
-    environment: # <-- FINAL CORRECT ENVIRONMENT VARIABLES
-      # HDFS CONFIGURATION FOR HIVE CLIENT: MUST BE EXPLICITLY DEFINED
-      - HIVE_SITE_CONF_fs_defaultFS=hdfs://namenode:8020
+    environment:
+      # HADOOP CORE CONFIGURATION: THIS IS THE FINAL CORRECTED VARIABLE
+      - CORE_SITE_XML_fs_defaultFS=hdfs://namenode:8020 # <-- NEW PREFIX
+
+      # HIVE WAREHOUSE CONFIGURATION (Required for Metastore startup)
       - HIVE_SITE_CONF_hive_metastore_warehouse_dir=/user/hive/warehouse
 
       # METASTORE DB CONFIGURATION
@@ -137,15 +143,19 @@ services:
     container_name: hive-server
     platform: linux/amd64
     # Removed env_file to prevent HDFS configuration conflict
-    environment: # <-- FINAL CORRECT ENVIRONMENT VARIABLES
-      - HIVE_SITE_CONF_fs_defaultFS=hdfs://namenode:8020
+    environment:
+      # HADOOP CORE CONFIGURATION: THIS IS THE FINAL CORRECTED VARIABLE
+      - CORE_SITE_XML_fs_defaultFS=hdfs://namenode:8020 # <-- NEW PREFIX
+
+      # HIVE WAREHOUSE CONFIGURATION (Required for Metastore startup)
       - HIVE_SITE_CONF_hive_metastore_warehouse_dir=/user/hive/warehouse
+
+      # METASTORE DB CONFIGURATION
       - HIVE_SITE_CONF_javax_jdo_option_ConnectionURL=jdbc:postgresql://hive-metastore-postgresql:5432/metastore
       - HIVE_SITE_CONF_javax_jdo_option_ConnectionDriverName=org.postgresql.Driver
       - HIVE_SITE_CONF_javax_jdo_option_ConnectionUserName=hive
       - HIVE_SITE_CONF_javax_jdo_option_ConnectionPassword=hive
       - HIVE_SITE_CONF_hive_metastore_uris=thrift://hive-metastore:9083
-      - HIVE_SITE_CONF_hive_metastore_warehouse_dir=/user/hive/warehouse
     volumes:
       - ./wait-for-it.sh:/usr/local/bin/wait-for-it.sh
     depends_on:
