--- a/lab5/hadoop-hive-dockercompose/hadoop.env
+++ b/lab5/hadoop-hive-dockercompose/hadoop.env
@@ -1,16 +1,7 @@
-# -----------------------------
-# HDFS Configuration
-# These are read by the namenode and datanode
-# -----------------------------
-CORE_CONF_fs.defaultFS=hdfs://namenode:8020
-HDFS_CONF_dfs.namenode.name.dir=file:///hadoop/dfs/name
-HDFS_CONF_dfs.datanode.data.dir=file:///hadoop/dfs/data
-HDFS_CONF_dfs.replication=1
+# HDFS Configuration: Must include the fs.defaultFS for the Hive client
+CORE_CONF_fs_defaultFS=hdfs://namenode:8020
 
-# -----------------------------
-# Hive Configuration
-# These are read by the hive-metastore-init, hive-metastore, and hive-server
-# -----------------------------
+# Hive Configuration: Must use underscore convention and point to Postgres
 HIVE_SITE_CONF_javax_jdo_option_ConnectionURL=jdbc:postgresql://hive-metastore-postgresql:5432/metastore
 HIVE_SITE_CONF_javax_jdo_option_ConnectionDriverName=org.postgresql.Driver
 HIVE_SITE_CONF_javax_jdo_option_ConnectionUserName=hive
