--- a/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
@@ -76,19 +76,8 @@ services:
     image: bde2020/hive:2.3.2-postgresql-metastore
     container_name: hive-metastore-init
     # Removed env_file to prevent HDFS configuration conflict
-    environment:
-      # HADOOP CORE CONFIGURATION: THIS IS THE FINAL CORRECTED VARIABLE
-      - CORE_SITE_XML_fs_defaultFS=hdfs://namenode:8020 # <-- NEW PREFIX
-
-      # HIVE WAREHOUSE CONFIGURATION (Required for Metastore startup)
-      - HIVE_SITE_CONF_hive_metastore_warehouse_dir=/user/hive/warehouse
-
-      # METASTORE DB CONFIGURATION
-      - HIVE_SITE_CONF_javax_jdo_option_ConnectionURL=jdbc:postgresql://hive-metastore-postgresql:5432/metastore
-      - HIVE_SITE_CONF_javax_jdo_option_ConnectionDriverName=org.postgresql.Driver
-      - HIVE_SITE_CONF_javax_jdo_option_ConnectionUserName=hive
-      - HIVE_SITE_CONF_javax_jdo_option_ConnectionPassword=hive
-      - HIVE_SITE_CONF_hive_metastore_uris=thrift://hive-metastore:9083
+    env_file:
+      - ./hadoop.env # <-- NOW RELYING ON THIS
     depends_on:
       hive-metastore-postgresql:
         condition: service_healthy
@@ -103,19 +92,8 @@ services:
     image: bde2020/hive:2.3.2-postgresql-metastore
     container_name: hive-metastore
     # Removed env_file to prevent HDFS configuration conflict
-    environment:
-      # HADOOP CORE CONFIGURATION: THIS IS THE FINAL CORRECTED VARIABLE
-      - CORE_SITE_XML_fs_defaultFS=hdfs://namenode:8020 # <-- NEW PREFIX
-
-      # HIVE WAREHOUSE CONFIGURATION (Required for Metastore startup)
-      - HIVE_SITE_CONF_hive_metastore_warehouse_dir=/user/hive/warehouse
-
-      # METASTORE DB CONFIGURATION
-      - HIVE_SITE_CONF_javax_jdo_option_ConnectionURL=jdbc:postgresql://hive-metastore-postgresql:5432/metastore
-      - HIVE_SITE_CONF_javax_jdo_option_ConnectionDriverName=org.postgresql.Driver
-      - HIVE_SITE_CONF_javax_jdo_option_ConnectionUserName=hive
-      - HIVE_SITE_CONF_javax_jdo_option_ConnectionPassword=hive
-      - HIVE_SITE_CONF_hive_metastore_uris=thrift://hive-metastore:9083
+    env_file:
+      - ./hadoop.env # <-- NOW RELYING ON THIS
 
     depends_on:
       hive-metastore-init:
@@ -143,19 +121,8 @@ services:
     container_name: hive-server
     platform: linux/amd64
     # Removed env_file to prevent HDFS configuration conflict
-    environment:
-      # HADOOP CORE CONFIGURATION: THIS IS THE FINAL CORRECTED VARIABLE
-      - CORE_SITE_XML_fs_defaultFS=hdfs://namenode:8020 # <-- NEW PREFIX
-
-      # HIVE WAREHOUSE CONFIGURATION (Required for Metastore startup)
-      - HIVE_SITE_CONF_hive_metastore_warehouse_dir=/user/hive/warehouse
-
-      # METASTORE DB CONFIGURATION
-      - HIVE_SITE_CONF_javax_jdo_option_ConnectionURL=jdbc:postgresql://hive-metastore-postgresql:5432/metastore
-      - HIVE_SITE_CONF_javax_jdo_option_ConnectionDriverName=org.postgresql.Driver
-      - HIVE_SITE_CONF_javax_jdo_option_ConnectionUserName=hive
-      - HIVE_SITE_CONF_javax_jdo_option_ConnectionPassword=hive
-      - HIVE_SITE_CONF_hive_metastore_uris=thrift://hive-metastore:9083
+    env_file:
+      - ./hadoop.env # <-- NOW RELYING ON THIS
     volumes:
       - ./wait-for-it.sh:/usr/local/bin/wait-for-it.sh
     depends_on:
