--- a/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
@@ -5,7 +5,7 @@ services:
   # HDFS - NameNode (Hadoop 2.7.4)
   # -----------------------------
   namenode:
-    image: ramilu90/hive-namenode:1.0.0
+    image: bde2020/hadoop-namenode:2.0.0-hadoop2.7.4-java8
     container_name: namenode
     restart: always
     env_file:
@@ -30,7 +30,7 @@ services:
   # HDFS - DataNode (Hadoop 2.7.4)
   # -----------------------------
   datanode:
-    image: ramilu90/hive-datanode:1.0.0
+    image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
     container_name: datanode
     restart: always
     env_file:
@@ -50,7 +50,7 @@ services:
   # PostgreSQL for Hive Metastore
   # -----------------------------
   hive-metastore-postgresql:
-    image: ramilu90/hive-metastore-postgresql:1.0.0
+    image: postgres:12
     container_name: hive-metastore-postgresql
     restart: always
     environment:
@@ -73,7 +73,7 @@ services:
   # Hive Metastore Schema Initialization
   # -----------------------------
   hive-metastore-init:
-    image: ramilu90/hive-metastore-init:1.0.0
+    image: bde2020/hive:2.3.2-postgresql-metastore
     container_name: hive-metastore-init
     env_file:
       - ./hadoop.env
@@ -88,7 +88,7 @@ services:
 
 
   hive-metastore:
-    image: ramilu90/hive-metastore:1.0.0
+    image: bde2020/hive:2.3.2-postgresql-metastore
     container_name: hive-metastore
     env_file:
       - ./hadoop.env
@@ -113,7 +113,7 @@ services:
     # HiveServer2
     # -----------------------------
   hive-server: # <-- ENSURE THIS IS ALIGNED WITH 'hive-metastore'
-    image: ramilu90/hive-server:1.0.0
+    image: bde2020/hive:2.3.2-postgresql-metastore
     container_name: hive-server
     platform: linux/amd64
     env_file:
