--- a/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
@@ -114,7 +114,7 @@ services:
     # HiveServer2
     # -----------------------------
   hive-server: # <-- ENSURE THIS IS ALIGNED WITH 'hive-metastore'
-    image: bramilu90/hive-server:1.0.0
+    image: ramilu90/hive-server:1.0.0
     container_name: hive-server
     platform: linux/amd64
     volumes:
